--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-library-skeleton",
+  "name": "@speleotica/frcs2breakout",
   "version": "0.0.0-development",
-  "description": "my personal ES2015 library project skeleton",
+  "description": "convert frcs cave survey data to breakout format",
   "main": "index.js",
   "sideEffects": false,
   "scripts": {
@@ -68,17 +68,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/typescript-library-skeleton.git"
+    "url": "https://github.com/speleotica/frcs2breakout.git"
   },
   "keywords": [
-    "typescript"
+    "cave-survey"
   ],
   "author": "Andy Edwards",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jedwards1211/typescript-library-skeleton/issues"
+    "url": "https://github.com/speleotica/frcs2breakout/issues"
   },
-  "homepage": "https://github.com/jedwards1211/typescript-library-skeleton#readme",
+  "homepage": "https://github.com/speleotica/frcs2breakout#readme",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
@@ -118,6 +118,9 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4"
+    "@babel/runtime": "^7.15.4",
+    "@speleotica/frcsdata": "^4.0.0",
+    "@speleotica/unitized": "^2.0.0",
+    "parse-segment": "^1.5.3"
   }
 }
